--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     </p>
     <!-- Polyfills bundle. -->
 
-<script src="./src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>    
+<script src="src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>    
 
 
 <!-- SystemJS support. -->
-<script src="./src/system.bundle.543e6.js" charset="utf-8"> </script>
+<script src="src/system.bundle.543e6.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="./src/import-map.ae6f5.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.fc41d.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.77ec6.js').catch(function(err) { console.error(err); })
+    System.import('./index.544bf.js').catch(function(err) { console.error(err); })
 </script>
   </body>
 </html>
